# c_talk

./: LICENSE  README.md  presentation.pptx
examples/1_basic/: CMakeLists.txt  README.md
examples/2_add_flags/: CMakeLists.txt  README.md
examples/2_add_flags/src/: CMakeLists.txt  foo.c  foo.h  main.c
examples/3_things_happen/: CMakeLists.txt  README.md  clang_tidy.cmake  flags.cmake
examples/3_things_happen/app_asan_clang_tidy/: CMakeLists.txt
examples/3_things_happen/app_asan_clang_tidy/src/secret/: foo.c  foo.h
examples/3_things_happen/app_ok/: CMakeLists.txt
examples/3_things_happen/app_ok/secret/: CMakeLists.txt  foo.c  foo.h
